# HotWatch

./: CMakeLists.txt  HotWatch.qml  LICENSE  README.md  qmldir
goserver/: go.mod  go.sum  main.go
qml/: HotWatch.qml
src/: HotWatch.cpp  HotWatch.h  HotWatchClient.cpp  HotWatchClient.hpp  config.h  config.h.in
